# SpeccyP

./: .gitignore  CMakeLists.txt  Quorum1024.md  README.md  README_ENG.md  cleanbuild.sh  config.c  memmap.ld  readme.txt  readme_.txt
SRC/: PIO_program1.c  PIO_program1.h  boot.h  config.c  config.h  font6x8revers.h  font8x8.h  font8x8_h  g_config.c  g_config.h  hardts_595.txt  help.h  joy.c  joy.h  kb_u_codes.c  kb_u_codes.h  main.c  ps2.c  screen_util.c  screen_util.h  tft_driver.c  tft_driver.h  tusb_config.h  usb_key.c  usb_key.h  util_sd.c  util_sd.h  util_sna.c  util_tap.c  util_tap.h  util_trd.c  util_trd.h  util_z80.c
SRC/zx_emu/: z80.c  zx_machine.c  zx_machine.h
boards/: GSP_M2.cmake  MURM1.cmake  MURM2.cmake  PICO_DV.cmake  PICO_PC.cmake  PI_CARD.cmake  WS_ZERO1.cmake  WS_ZERO2.cmake
drivers/audio_i2s/: CMakeLists.txt  audio_i2s.c  audio_i2s.h
drivers/hdmi_hstx/: HDMI_hstx.c  HDMI_hstx_audio.c  hstx_data_island_queue.c  hstx_data_island_queue.h  hstx_packet.c  hstx_packet.h  (+3 more)
include/: tusb_config.h  vfs_config.h
src/: HDMI.c  HDMI.h  SpeccyP.c  SpeccyP.h  aySoft.c  aySoft.h  boot.h  config.c  config.h  cpm.h  fdi_stream.c  fdi_stream.h  fnt8x16.h  font6x8.h  font6x8revers.h  font6x8revers_new.h  g_config.c  g_config.h  graphics.h  gs_picobus.c  gs_picobus.h  hardts_595.txt  hw_util.c  hw_util.h  image.h  joy.c  joy.h  kb_u_codes.c  kb_u_codes.h  kbd_img.h  ps2.c  ps2.h  screen_util.c  screen_util.h  tft_driver.c  tft_driver.h  tusb_config.h  usb_key.c  usb_key.h  usb_serial_stubs.c  (+13 more)
vscod/: c_cpp_properties.json  settings.json
zx_emu/: zx_machine.c
(+85 files in other folders)
